--- a/src/main/webapp/WEB-INF/views/book_shelf.html
+++ b/src/main/webapp/WEB-INF/views/book_shelf.html
@@ -36,13 +36,15 @@
             <tr>
                 <td>
                     <input type="text" placeholder="author" th:field="*{author}">
+                    <p th:if="${#fields.hasErrors('author')}">field value must contain author</p>
                 </td>
                 <td>
                     <input type="text" placeholder="book_title" th:field="*{title}">
+                    <p th:if="${#fields.hasErrors('title')}">field value must contain title</p>
                 </td>
                 <td>
                     <input type="text" placeholder="size (pages)" th:field="*{size}">
-                    <p th:if="${#fields.hasErrors()}">field value must be digit and less than 4 signs</p>
+                    <p th:if="${#fields.hasErrors('size')}">field value must be digit and less than 4 signs</p>
                 </td>
                 <td>
                     <input type="submit" value="save">
@@ -67,16 +69,15 @@
         </table>
     </form>
 
-    <form method="post" th:action="@{/books/removeByRegex}">
+    <form method="post" th:action="@{/books/removeByRegex}" th:object="${regexToRemove}">
         <table>
             <tr>
                 <td>
-                    <input type="text" placeholder="regex" th:name="queryRegex">
+                    <input type="text" placeholder="regex" th:field="*{regex}">
                 </td>
                 <td>
                     <input type="submit" value="remove by regex">
                 </td>
-
             </tr>
         </table>
     </form>
